--- a/app/src/main/res/layout/activity_new_especialista.xml
+++ b/app/src/main/res/layout/activity_new_especialista.xml
@@ -17,6 +17,19 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary">
+
+            <ImageView
+                android:id="@+id/nEsp_logo"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="right"
+                android:layout_margin="8dp"
+                android:visibility="visible"
+                app:layout_anchor="@+id/include"
+                app:layout_anchorGravity="top|right"
+                app:srcCompat="@drawable/logo1"/>
+
+
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -34,16 +47,6 @@
         app:backgroundTint="@color/colorSecondaryAccent"
         app:srcCompat="@drawable/ic_logout_variant_white_18dp"/>
 
-    <ImageView
-        android:id="@+id/nEsp_logo"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|left"
-        android:layout_marginLeft="300dp"
-        android:layout_marginTop="8dp"
-        android:visibility="visible"
-        app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="top|right"
-        app:srcCompat="@drawable/logo1"/>
+
 
     </android.support.design.widget.CoordinatorLayout>
