--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="newBackground">#d6d6d6</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="fundo_btn">#3e5b3c</color>
+    <color name="fundo_2">#9fa9a9</color>
+    <color name="dColorTest">#efeeee</color>
 </resources>
