--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,52 @@
     android:layout_height="match_parent"
     tools:context="com.example.dehcors.teleconsultorapp.MainActivity"
     android:orientation="vertical"
-    android:weightSum="1"
-    >
+    android:weightSum="1">
 
-    <ImageView
-        android:id="@+id/main_logo"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="right"
-        app:srcCompat="@drawable/logo1" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="96dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp"
+        >
+
+        <ImageView
+            android:id="@+id/main_logo"
+            android:layout_width="73dp"
+            android:layout_height="67dp"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="top|center_horizontal"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/logo1" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:shadowColor="@color/fundo_2"
+            android:shadowDx="12"
+            android:shadowDy="9"
+            android:shadowRadius="8"
+            android:text="@string/title_in"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
+            android:textColor="@color/black" />
+
+    </FrameLayout>
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="387dp"
+        android:layout_height="351dp"
         android:layout_margin="8dp">
 
 
         <GridLayout
-            android:layout_width="296dp"
+            android:layout_width="310dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-
-
-            >
+            android:layout_gravity="center_vertical|center_horizontal">
 
             <ImageButton
                 android:id="@+id/main_woman"
@@ -39,9 +61,7 @@
                 android:layout_column="0"
                 android:layout_gravity="center"
                 android:layout_row="0"
-                app:srcCompat="@drawable/girl3b"
-
-                />
+                app:srcCompat="@drawable/girl3b" />
 
             <TextView
                 android:id="@+id/txMulher"
@@ -107,16 +127,10 @@
                 android:text="@string/saude_bb"
                 android:textColor="@android:color/black" />
 
-            <ImageButton
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_column="1"
-                android:layout_gravity="center"
-                android:layout_row="2"
-              />
+
 
             <ImageButton
-                android:id="@+id/main_primSoc"
+                android:id="@+id/main_atPrimaria"
                 android:layout_width="96dp"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
@@ -126,32 +140,45 @@
                 app:srcCompat="@drawable/first_help3" />
 
             <TextView
-                android:id="@+id/txPrimSoc"
+                android:id="@+id/txAtPrimaria"
                 style="@android:style/Widget.DeviceDefault.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_row="3"
+                android:layout_gravity="center"
                 android:layout_marginBottom="8dp"
-                android:text="@string/primSoc"
+                android:text="@string/atPrim"
                 android:textColor="@android:color/black" />
 
-
             <ImageButton
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_column="1"
-                android:layout_gravity="center"
+                android:id="@+id/main_clinicas"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_marginTop="18dp"
                 android:layout_row="4"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/add3"
                 />
+
+            <TextView
+                android:text="@string/find"
+                style="@android:style/Widget.DeviceDefault.TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="5"
+                android:layout_column="0"
+                android:textColor="@color/black"
+                android:layout_gravity="center"/>
 
 
             <ImageButton
                 android:id="@+id/main_acessarConta"
-                style="@android:style/Widget.Material.ImageButton"
+                style="@android:style/Widget.Material.Light.Button.Borderless"
                 android:layout_width="96dp"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
+                android:layout_column="2"
                 android:layout_gravity="center"
                 android:layout_marginTop="18dp"
                 android:layout_row="4"
@@ -162,31 +189,13 @@
                 style="@android:style/Widget.DeviceDefault.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="0"
+                android:layout_column="2"
                 android:layout_row="5"
                 android:textColor="@color/black"
                 android:layout_gravity="center"/>
 
-            <ImageButton
-                android:id="@+id/main_criarConta"
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_marginTop="18dp"
-                android:layout_row="4"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/add3"
-              />
 
-            <TextView
-                android:text="@string/criar"
-                style="@android:style/Widget.DeviceDefault.TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_row="5"
-                android:layout_column="2"
-                android:textColor="@color/black"
-                android:layout_gravity="center"/>
+
 
 
         </GridLayout>
