--- a/app/src/main/res/layout/activity_novo_diagnostico.xml
+++ b/app/src/main/res/layout/activity_novo_diagnostico.xml
@@ -1,51 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dehcors.teleconsultorapp.NewAgente">
+    tools:context="com.example.dehcors.teleconsultorapp.NovoDiagnostico">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+
         <android.support.v7.widget.Toolbar
-            android:id="@+id/agt_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary">
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <ImageView
-                android:id="@+id/nAg_logo"
+                android:id="@+id/nd_logo"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_gravity="end"
                 android:layout_margin="8dp"
-                android:visibility="visible"
-                app:layout_anchor="@+id/include"
+                app:layout_anchor="@+id/layout_nvDiag"
                 app:layout_anchorGravity="top|right"
+                android:layout_weight="1"
                 app:srcCompat="@drawable/logo1" />
         </android.support.v7.widget.Toolbar>
 
-
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/new_agente"
-        android:id="@+id/include" />
-
+    <include layout="@layout/content_novo_diagnostico"
+        android:id="@+id/layout_nvDiag"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/newAgent_floatSair"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/colorSecondaryAccent"
-        app:srcCompat="@drawable/ic_logout_variant_white_18dp" />
-
-
+        app:srcCompat="@drawable/ic_logout_variant_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
