--- a/app/src/main/res/layout/activity_relatorios.xml
+++ b/app/src/main/res/layout/activity_relatorios.xml
@@ -5,22 +5,76 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.dehcors.teleconsultorapp.RelatoriosActivity"
+    tools:context="com.example.dehcors.teleconsultorapp.RelatoriosView"
     android:weightSum="1">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/relatorios_logo"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="right"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_relat"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize">
+
+                <TextView
+                    android:id="@+id/toolbar_titulo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="@string/act_rel_title"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
+
+                <ImageView
+                    android:id="@+id/imgLogo"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="bottom|right"
+                    app:srcCompat="@drawable/logo1"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="8dp" />
+
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_margin="8dp"
-        app:srcCompat="@drawable/logo1" />
+        android:weightSum="1">
+
+
+        <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:gravity="center"
+        android:text="@string/title1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:layout_weight="0.98" />
+
+    </LinearLayout>
+
 
     <android.support.v7.view.menu.ListMenuItemView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="24dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_weight="0.00"
@@ -35,14 +89,14 @@
         <TextView
             android:layout_width="187dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.69"
+            android:layout_weight="0.98"
             android:text="@string/concluidas"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="74dp"
+            android:layout_width="70dp"
             android:layout_height="75dp"
             android:gravity="center"
             android:text="123"
@@ -70,14 +124,14 @@
         <TextView
             android:layout_width="187dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.69"
+            android:layout_weight="0.98"
             android:text="@string/abertas"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="74dp"
+            android:layout_width="70dp"
             android:layout_height="75dp"
             android:gravity="center"
             android:text="56"
@@ -105,14 +159,14 @@
         <TextView
             android:layout_width="187dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.69"
+            android:layout_weight="0.98"
             android:text="@string/exames"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="74dp"
+            android:layout_width="70dp"
             android:layout_height="75dp"
             android:gravity="center"
             android:text="39"
@@ -122,6 +176,7 @@
             android:textStyle="bold" />
 
     </android.support.v7.view.menu.ListMenuItemView>
+
 
     <android.support.v7.view.menu.ListMenuItemView
         android:layout_width="match_parent"
@@ -141,7 +196,7 @@
             android:id="@+id/textView"
             android:layout_width="187dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.69"
+            android:layout_weight="0.98"
             android:layout_gravity="center_vertical"
             android:text="@string/aguardando"
             android:textAlignment="center"
@@ -149,7 +204,7 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="74dp"
+            android:layout_width="70dp"
             android:layout_height="75dp"
             android:gravity="center"
             android:text="6"
