--- a/app/src/main/res/layout/content_nova_consulta.xml
+++ b/app/src/main/res/layout/content_nova_consulta.xml
@@ -23,30 +23,65 @@
             android:orientation="vertical"
             >
 
-            <!-- Quando o paciente já for cadastrado, o cpf recupera as informações de nome e nascimento -->
+            <Spinner
+                android:id="@+id/nvConsul_idRegiao"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp">
+            </Spinner>
+
+            <Spinner
+                android:id="@+id/nvConsul_idArea"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                 />
+
+            <Spinner
+                android:id="@+id/nvConsul_tipoDuvida"
+                style="@android:style/Widget.Material.Light.Spinner.Underlined"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="16dp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:gravity="bottom"
+                android:text="@string/nvConsul_fill"
+                android:textAlignment="center"
+                android:textColor="@color/colorSecondary"
+                android:textStyle="italic" />
+
             <EditText
                 android:id="@+id/nvConsul_cpfPaciente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:enabled="true"
-                android:hint="CPF do paciente - Apenas números"
+                android:hint="@string/cpf_pac"
                 android:inputType="number" />
 
             <EditText
                 android:id="@+id/nvConsul_nomePaciente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="12dp"
-                android:hint="Nome completo do paciente"
+                android:hint="@string/nm_paciente"
                 android:inputType="text" />
 
 
@@ -54,92 +89,47 @@
                 android:id="@+id/nvConsul_nascPaciente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="18dp"
-                android:hint="Data Nascimento"
+                android:hint="@string/data_nasc"
                 android:inputType="date" />
 
             <Spinner
                 android:id="@+id/nvConsul_spGenero"
                 style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:minWidth="250dp"
                />
 
-            <Spinner
-                android:id="@+id/nvConsul_idRegiao"
-                style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:minWidth="250dp"
-                >
 
-            </Spinner>
-
-            <Spinner
-                android:id="@+id/nvConsul_idArea"
-                style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:elevation="1dp"
-                android:minWidth="250dp"
-                />
-
-            <Spinner
-                android:id="@+id/nvConsul_tipoDuvida"
-                style="@android:style/Widget.Material.Light.Spinner.Underlined"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:minWidth="250dp"
-               />
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="24dp">
 
                 <EditText
                     android:id="@+id/nvConsul_txCaso"
-                    android:layout_width="250dp"
+                    android:layout_width="279dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"
                     android:allowUndo="true"
-                    android:hint="Descreva o caso da melhor forma possível"
+                    android:hint="@string/descreva_caso"
                     android:inputType="text|textMultiLine"
                     android:theme="@style/AppTheme"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteY="-50dp" />
 
 
                 <ImageButton
@@ -157,11 +147,11 @@
                     android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                     android:longClickable="true"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.232"
+                    app:layout_constraintHorizontal_bias="0.586"
                     app:layout_constraintLeft_toRightOf="@+id/nvConsul_txCaso"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.466"
+                    app:layout_constraintVertical_bias="0.625"
                     app:srcCompat="@android:drawable/ic_btn_speak_now"
                     tools:clickable="true" />
 
@@ -169,12 +159,13 @@
 
 
             <ImageButton
-                android:id="@+id/nvConsul_fotoFilme"
+                android:id="@+id/nvConsul_foto"
                 style="@android:style/Widget.ImageButton"
                 android:layout_width="200dp"
                 android:layout_height="56dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
                 app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />
 
 
