--- a/app/src/main/res/layout/content_user_dashboard.xml
+++ b/app/src/main/res/layout/content_user_dashboard.xml
@@ -10,13 +10,7 @@
     tools:context="com.example.dehcors.teleconsultorapp.UserDashboard"
     tools:showIn="@layout/app_bar_user_dashboard">
 
-    <ImageView
-        android:id="@+id/userDash_logo"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_margin="8dp"
-        app:srcCompat="@drawable/logo1"
-        android:layout_gravity="right"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +18,7 @@
         android:orientation="horizontal"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="36dp"
         android:layout_marginBottom="24dp"
       >
 
@@ -33,26 +27,24 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/userDash_verConsulta"
+                android:id="@+id/userDash_newDiagnostico"
                 android:layout_width="124dp"
                 android:layout_height="124dp"
-                android:layout_margin="8dp"
-                android:contentDescription="@string/consulta"
-                app:srcCompat="@drawable/search_icon"
                 android:layout_column="0"
-                android:layout_row="0"/>
+                android:layout_margin="8dp"
+                android:layout_row="0"
+                android:contentDescription="@string/diagn"
+                app:srcCompat="@drawable/woman1" />
 
             <TextView
-                android:id="@+id/userDash_tx_verConsulta"
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="@string/consulta"
-                android:textSize="14sp"
-                android:textAlignment="center"
                 android:layout_column="0"
+                android:layout_margin="8dp"
                 android:layout_row="1"
-                />
+                android:text="@string/diagn"
+                android:textAlignment="center"
+                android:textSize="14sp" />
 
             <ImageButton
                 android:id="@+id/userDash_newConsul"
@@ -65,7 +57,6 @@
                 app:srcCompat="@drawable/document_icon" />
 
             <TextView
-                android:id="@+id/userDash_tx_novaConsulta"
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -102,7 +93,6 @@
                 android:layout_row="0"/>
 
             <TextView
-                android:id="@+id/userDash_tx_verRelatorio"
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -113,22 +103,21 @@
                 android:layout_row="1"/>
 
             <ImageButton
-                android:id="@+id/userDash_rotas"
+                android:id="@+id/userDash_verArquivo"
                 android:layout_width="124dp"
                 android:layout_height="124dp"
-                app:srcCompat="@drawable/map_icon1"
-                android:contentDescription="@string/rotas"
+                app:srcCompat="@drawable/search_icon"
+                android:contentDescription="@string/consulta"
                 android:layout_margin="8dp"
                 android:layout_column="10"
                 android:layout_row="0"/>
 
 
             <TextView
-                android:id="@+id/userDash_tx_verRota"
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
-               android:layout_margin="8dp"
-                android:text="@string/rotas"
+                  android:layout_margin="8dp"
+                android:text="@string/consulta"
                 android:textSize="14sp"
                 android:textAlignment="center"
                 android:layout_column="10"
