--- a/app/src/main/res/layout/pop_esqueci_senha.xml
+++ b/app/src/main/res/layout/pop_esqueci_senha.xml
@@ -1,44 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pop_alterSenha"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
 
     <TextView
-        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
-        android:text="@string/alter_title"
+        android:text="@string/recupera_senha"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp" />
 
     <EditText
-        android:id="@+id/alterSenha_senha"
+        android:id="@+id/popEsenha_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="INSIRA NOVA SENHA"
-        android:inputType="text"
-        tools:textColorHint="@android:color/darker_gray" />
-
-    <EditText
-        android:id="@+id/altersenha_repeteSenha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:ems="10"
-        android:hint="REPITA A SENHA"
+        android:hint="@string/hint_recupera_senha"
         android:inputType="textPassword"
-        android:textColorHint="@android:color/darker_gray" />
+        tools:textColorHint="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -46,7 +36,8 @@
         android:layout_gravity="right"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="42dp"
         android:orientation="horizontal">
 
         <Button
@@ -56,7 +47,7 @@
             android:layout_height="48dp"
             android:layout_marginRight="32dp"
             android:elevation="2dp"
-            android:text="@string/alter_quit"
+            android:text="@string/btn_cancela"
             android:textColor="@color/colorSecondaryDark"
             android:textColorLink="@color/primaryAcent" />
 
@@ -67,10 +58,24 @@
             android:layout_height="48dp"
             android:layout_marginRight="8dp"
             android:elevation="2dp"
-            android:text="@string/alter_confirm"
+            android:text="@string/btn_enviar"
             android:textColor="@color/colorSecondaryDark"
             android:textColorLink="@color/primaryAcent"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="sendMessMail"/>
+
+
     </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
 
 </LinearLayout>
