--- a/app/src/main/res/layout/usuario_logado.xml
+++ b/app/src/main/res/layout/usuario_logado.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.dehcors.teleconsultorapp.UsuarioLogado">
+    tools:context="com.example.dehcors.teleconsultorapp.UsuarioLogado"
+    tools:showIn="@layout/activity_usuario_logado">
 
 
 
