--- a/app/src/main/res/layout/ver_clinicas.xml
+++ b/app/src/main/res/layout/ver_clinicas.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.dehcors.teleconsultorapp.RotaActivity"
+    tools:context="com.example.dehcors.teleconsultorapp.VerClinicas"
     android:weightSum="1">
 
     <ScrollView
