--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/listaConsultas_emAberto"
+        android:id="@+id/menu_listar_Consultas"
         android:icon="@drawable/ic_file_document_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_consult_navigation"
+        app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/listaConsultas_respondidas"
+        android:id="@+id/menu_listar_Diagnostico"
         android:icon="@drawable/ic_folder_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_diagn_navigation"
+        app:showAsAction="ifRoom"/>
 
 </menu>
