--- a/app/src/main/res/layout/activity_arquivos.xml
+++ b/app/src/main/res/layout/activity_arquivos.xml
@@ -5,66 +5,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.dehcors.teleconsultorapp.ConsultaListView">
-
-    <include layout="@layout/consulta_list_view"
-        android:id="@+id/consulta_view" />
-
-    <include layout="@layout/diagnostico_list_view"
-        android:id="@+id/diagnostico_view"/>
-
+    tools:context="com.example.dehcors.teleconsultorapp.ArquivosActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:orientation="vertical">
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/arq_toolbar"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
-
-        <TextView
-                android:id="@+id/toolbar_titulo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="@string/title_consult_navigation"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
-
-            <ImageView
-                android:id="@+id/imgLogo"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="bottom|right"
-                app:srcCompat="@drawable/logo1"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="8dp" />
-
-        </RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_weight="1"
+            android:layout_gravity="end"
+            android:layout_margin="8dp"
+            app:srcCompat="@drawable/logo1" />
 
     </android.support.v7.widget.Toolbar>
 
-
-</android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/listarArquivos_btNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemIconTint="@color/colorSecondaryDark"
         app:itemTextColor="@color/black"
-        android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation" />
 
 
