--- a/app/src/main/res/layout/content_user_dashboard.xml
+++ b/app/src/main/res/layout/content_user_dashboard.xml
@@ -107,7 +107,7 @@
                 android:layout_width="124dp"
                 android:layout_height="124dp"
                 app:srcCompat="@drawable/search_icon"
-                android:contentDescription="@string/consulta"
+                android:contentDescription="@string/verArq"
                 android:layout_margin="8dp"
                 android:layout_column="10"
                 android:layout_row="0"/>
@@ -116,12 +116,12 @@
             <TextView
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
-                  android:layout_margin="8dp"
-                android:text="@string/consulta"
-                android:textSize="14sp"
-                android:textAlignment="center"
                 android:layout_column="10"
-                android:layout_row="1"/>
+                android:layout_margin="8dp"
+                android:layout_row="1"
+                android:text="@string/verArq"
+                android:textAlignment="center"
+                android:textSize="14sp" />
 
 
         </GridLayout>
