--- a/app/src/main/res/layout/content_novo_diagnostico.xml
+++ b/app/src/main/res/layout/content_novo_diagnostico.xml
@@ -23,14 +23,13 @@
                 android:id="@+id/nvDiagno_nuProntuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
                 android:hint="@string/nu_prontuario"/>
 
             <Spinner
                 android:id="@+id/nvDiagno_genPaciente"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_margin="8dp"
+                android:layout_marginTop="16dp"
                 style="@android:style/Widget.Material.Light.Spinner.Underlined">
             </Spinner>
 
@@ -38,55 +37,17 @@
                 android:id="@+id/nvDiagno_areaMedic"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_margin="8dp"
+                android:layout_marginTop="16dp"
                 style="@android:style/Widget.Material.Light.Spinner.Underlined">
             </Spinner>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="8dp"
-                    android:text="@string/anex_exam"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:id="@+id/nvDiagno_btn_anexExam"
-                    style="@android:style/Widget.Material.Button"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:elevation="2dp"
-                    app:srcCompat="@drawable/ic_attachment_black_24dp" />
-
-                <ImageButton
-                    android:id="@+id/nvDiagno_camera"
-                    style="@android:style/Widget.Material.ImageButton"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:elevation="2dp"
-                    app:srcCompat="@drawable/ic_menu_camera" />
-            </LinearLayout>
 
 
             <EditText
                 android:id="@+id/nvDiagno_txCaso"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="24dp"
+                android:padding="2dp"
                 android:gravity="top"
                 android:allowUndo="true"
                 android:background="@color/dColorTest"
@@ -94,6 +55,45 @@
                 android:inputType="text|textMultiLine"
                 android:minHeight="200dp"
                 android:theme="@style/AppTheme" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="8dp"
+                    android:text="@string/anex_exam"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/nvDiagno_btn_anexar"
+                    style="@android:style/Widget.Material.Button"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
+                    android:elevation="2dp"
+                    app:srcCompat="@drawable/ic_attachment_black_24dp" />
+
+                <ImageButton
+                    android:id="@+id/nvDiagno_btn_camera"
+                    style="@android:style/Widget.Material.ImageButton"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
+                    android:elevation="2dp"
+                    app:srcCompat="@drawable/ic_menu_camera" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/nvDiagno_btn_enviar"
