--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="fundo_btn">#3e5b3c</color>
-    <color name="fundo_2">#9fa9a9</color>
+    <color name="fundo_2">#78b4b4</color>
     <color name="dColorTest">#efeeee</color>
 </resources>
