--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,67 +11,68 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="120dp"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="10dp"
-        >
+        android:elevation="4dp">
 
         <ImageView
             android:id="@+id/main_logo"
             android:layout_width="73dp"
             android:layout_height="67dp"
-            android:layout_marginTop="8dp"
             android:layout_gravity="top|center_horizontal"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/logo1" />
 
         <TextView
+            android:elevation="4dp"
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:shadowColor="@color/fundo_2"
             android:shadowDx="12"
-            android:shadowDy="9"
+            android:shadowDy="12"
             android:shadowRadius="8"
             android:text="@string/title_in"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@color/black" />
+            android:textColor="@color/colorPrimaryDark" />
 
     </FrameLayout>
 
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="351dp"
-        android:layout_margin="8dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp">
 
 
         <GridLayout
-            android:layout_width="310dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal">
 
             <ImageButton
                 android:id="@+id/main_woman"
-                android:layout_width="96dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:layout_gravity="center"
                 android:layout_row="0"
-                app:srcCompat="@drawable/girl3b" />
+                style="@android:style/Widget.Material.Light.Button.Borderless"
+                app:srcCompat="@drawable/agirl" />
 
             <TextView
                 android:id="@+id/txMulher"
                 style="@android:style/Widget.DeviceDefault.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_row="1"
                 android:layout_column="0"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="8dp"
+                android:layout_row="1"
                 android:text="@string/saude_wo"
                 android:textColor="@android:color/black" />
 
@@ -81,7 +82,7 @@
                 android:layout_column="1"
                 android:layout_gravity="center"
                 android:layout_row="0"
-                />
+                style="@android:style/Widget.Material.Light.Button.Borderless" />
 
             <ImageButton
                 android:id="@+id/main_oldMan"
@@ -90,7 +91,8 @@
                 android:layout_column="2"
                 android:layout_gravity="center"
                 android:layout_row="0"
-                app:srcCompat="@drawable/oldman3" />
+                style="@android:style/Widget.Material.Light.Button.Borderless"
+                app:srcCompat="@drawable/aold" />
 
 
             <TextView
@@ -99,9 +101,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
-                android:layout_row="1"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="8dp"
+                android:layout_row="1"
                 android:text="@string/saude_vo"
                 android:textColor="@android:color/black" />
 
@@ -114,7 +116,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="18dp"
                 android:layout_row="2"
-                app:srcCompat="@drawable/baby3" />
+                style="@android:style/Widget.Material.Light.Button.Borderless"
+                app:srcCompat="@drawable/abb2" />
 
             <TextView
                 android:id="@+id/txCrianca"
@@ -122,11 +125,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:layout_row="3"
                 android:layout_marginBottom="8dp"
+                android:layout_row="3"
                 android:text="@string/saude_bb"
                 android:textColor="@android:color/black" />
-
 
 
             <ImageButton
@@ -137,7 +139,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="18dp"
                 android:layout_row="2"
-                app:srcCompat="@drawable/first_help3" />
+                style="@android:style/Widget.Material.Light.Button.Borderless"
+                app:srcCompat="@drawable/aap" />
 
             <TextView
                 android:id="@+id/txAtPrimaria"
@@ -145,57 +148,55 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
-                android:layout_row="3"
                 android:layout_gravity="center"
                 android:layout_marginBottom="8dp"
+                android:layout_row="3"
                 android:text="@string/atPrim"
                 android:textColor="@android:color/black" />
 
             <ImageButton
                 android:id="@+id/main_clinicas"
                 android:layout_width="96dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                style="@android:style/Widget.Material.Light.Button.Borderless"
                 android:layout_column="0"
+                android:layout_gravity="center"
                 android:layout_marginTop="18dp"
                 android:layout_row="4"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/add3"
-                />
+                android:elevation="0dp"
+                app:srcCompat="@drawable/amaps" />
 
             <TextView
-                android:text="@string/find"
                 style="@android:style/Widget.DeviceDefault.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="5"
                 android:layout_column="0"
-                android:textColor="@color/black"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_row="5"
+                android:text="@string/find"
+                android:textColor="@color/black" />
 
 
             <ImageButton
                 android:id="@+id/main_acessarConta"
                 style="@android:style/Widget.Material.Light.Button.Borderless"
-                android:layout_width="96dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:layout_gravity="center"
                 android:layout_marginTop="18dp"
                 android:layout_row="4"
-                app:srcCompat="@drawable/signin3" />
+                app:srcCompat="@drawable/aentrar2" />
 
             <TextView
-                android:text="@string/acesse"
                 style="@android:style/Widget.DeviceDefault.TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
+                android:layout_gravity="center"
                 android:layout_row="5"
-                android:textColor="@color/black"
-                android:layout_gravity="center"/>
-
-
-
+                android:text="@string/acesse"
+                android:textColor="@color/black" />
 
 
         </GridLayout>
