--- a/app/src/main/res/layout/activity_nova_consulta.xml
+++ b/app/src/main/res/layout/activity_nova_consulta.xml
@@ -38,14 +38,8 @@
         android:id="@+id/nConsul_content" 
         />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/nvConsul_Sair"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/colorSecondaryAccent"
-        app:srcCompat="@drawable/ic_logout_variant_white_24dp" />
+    <!--FLOAT BUTTON android.support.design.widget.FloatingActionButton-->
+
 
 
 
