--- a/app/src/main/res/layout/content_user_dashboard.xml
+++ b/app/src/main/res/layout/content_user_dashboard.xml
@@ -34,7 +34,7 @@
                 android:layout_margin="8dp"
                 android:layout_row="0"
                 android:contentDescription="@string/diagn"
-                app:srcCompat="@drawable/woman1" />
+                app:srcCompat="@drawable/diagn4" />
 
             <TextView
                 android:layout_width="124dp"
@@ -54,7 +54,7 @@
                 android:layout_margin="8dp"
                 android:layout_row="0"
                 android:contentDescription="@string/new_check"
-                app:srcCompat="@drawable/document_icon" />
+                app:srcCompat="@drawable/consult1" />
 
             <TextView
                 android:layout_width="124dp"
