--- a/app/src/main/res/layout/pop_troca_senha.xml
+++ b/app/src/main/res/layout/pop_troca_senha.xml
@@ -15,8 +15,9 @@
         android:layout_marginTop="16dp"
         android:text="@string/alter_title"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="@color/colorPrimaryDark" />
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/alterSenha_senha"
@@ -24,10 +25,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="36dp"
         android:ems="10"
         android:hint="INSIRA NOVA SENHA"
-        android:inputType="text"
+        android:inputType="textPassword"
+        android:textSize="16sp"
         tools:textColorHint="@android:color/darker_gray" />
 
     <EditText
@@ -38,7 +40,8 @@
         android:ems="10"
         android:hint="REPITA A SENHA"
         android:inputType="textPassword"
-        android:textColorHint="@android:color/darker_gray" />
+        android:textColorHint="@android:color/darker_gray"
+        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
