--- a/app/src/main/res/layout/usuario_logado.xml
+++ b/app/src/main/res/layout/usuario_logado.xml
@@ -6,9 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.dehcors.teleconsultorapp.UsuarioLogado"
-    tools:showIn="@layout/activity_usuario_logado">
+    tools:context="com.example.dehcors.teleconsultorapp.UsuarioLogado">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <ImageView
+                android:id="@+id/uL_logo"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end"
+                android:layout_margin="8dp"
+                app:layout_anchor="@+id/layout_userLogado"
+                app:layout_anchorGravity="top|right"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/logo1" />
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
 
     <ScrollView
